welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:4: error: ';' expected but 'else' found.
  else if(a%3==0){
  ^